# ai-engineer-technical-test

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  server.py
app/api/: promptior.py  promtior.py
app/chains/: retrieval_chain.py  retrieval_data.py
app/chains/prompts/: rag_prompt.py
app/schemas/: rag.py
app/services/: vectorstore.py
app/utils/: get_links.py
copilot/: .workspace
copilot/environments/promtiorrag/: manifest.yml
copilot/promtior-rag-service/: manifest.yml
doc/: project_overview.md
