[tool.poetry]
name = "promptior_tech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.3.1"}
pydantic = ">=2.7,<3.0"
langchain-openai = "^0.3.18"
python-decouple = "^3.8"
langchain-community = "^0.3.24"
beautifulsoup4 = "^4.13.4"
faiss-cpu = "^1.11.0"
sentence-transformers = "^4.1.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
